--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -37,8 +37,6 @@
 }
 
 .portfolio-thumbnails {
-    width: 630px;
-    max-width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
@@ -162,7 +160,7 @@ figure {
     content: '';
     width: 50%;
     height: 100%;
-    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
+    background: -webkit-linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
     background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, .3) 100%);
     -webkit-transform: skewX(-25deg);
     transform: skewX(-25deg);
@@ -182,5 +180,19 @@ figure {
 @keyframes shine {
     100% {
         left: 125%;
+    }
+}
+
+.single-portfolio {
+    display: flex;
+    flex-direction: column;
+    width: 80vw;
+    max-width: 100%;
+    margin-inline: auto;
+
+    img {
+        max-width: 100%;
+        height: auto;
+        display: block;
     }
 }
